fixed responsive issues on smaller screens

--- a/colorGame.css
+++ b/colorGame.css
@@ -3,36 +3,48 @@ body {
     background-color: rgb(44, 44, 44);
     color: white;
     font-family: 'Poiret One', cursive;
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 h1 {
     background-color: rgb(28, 126, 156);
     text-align: center;
     color: white;
+    padding-top: 20px;
     margin-block-start: 0;
     margin-block-end: 0;
 }
 #colorDisplayed {
     background-color: rgb(28, 126, 156);
-    font-size: 22px;
-    font-weight: 800;
+    font-size: 26px;
+    font-weight: 1000;
     display: block;
     text-align: center;
     padding-bottom: 18px;
 }
 .navbar {
     background-color: rgb(207, 207, 207);
+    color:  rgb(28, 126, 156);
+    font-weight: 1000;
     text-align: center;
-    padding: 10px;
+    height: 28px;
+    display: flex;
 }
-.result {
-    padding: 15px;
+#result {
+    padding-top: 4px;
     margin: 0 auto;
+    display: inline-block;
+    width: 18%;
 }
 button {
-    background-color: rgb(207, 207, 207);
+    height: 100%;
+    background: none;
     border: none;
-    padding-right: 15px;
-    padding-left: 15px;
+    font-family: 'Poiret One', cursive;
+    text-transform: uppercase;
+    font-weight: 1000;
+    font-size: inherit;
 }
 
 .square {
